--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li class="intro__list">Аэропортов <span class="intro__span-accent">241</span></li>
 			</ul>
 		</section>
-<!--
+
 		<section class="photo-grid">
 			<img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
 			<img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы">
@@ -47,7 +47,8 @@
 			<img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Вершина Эльбруса">
 			<img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак">
 			<img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Мох на камнях">
-			<img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на гору">				<img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Скалистый обрыв">
+			<img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на гору">
+			<img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Скалистый обрыв">
 			<img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горные вершины в облаках">
 		</section>
 <!--
@@ -109,14 +110,14 @@
 						в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
 			</div>
 		</section>
-
+	
 		<section class="cover container">
 				<a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
 				<p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 		</section>
 
 		</main>
-		
+	
 		<footer class="footer">
 			<a class="footer__link" href="https://yandex.ru/maps">Карты</a>
 			<a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
@@ -125,6 +126,6 @@
 			<a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
 			<p class="footer__copyright">© 2022. Маргарита Шабанова</p>
 		</footer>
-  -->
+	-->
 </body>
 </html>
