--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
 				</div>
 				<img class="place__image" src="./images/place-kosa.jpg" alt="Водный горизонт">
-				<div class="">
+				<div class="place__paragraphs">
 					<p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
 					<p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
@@ -73,7 +73,7 @@
 					<a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>					
         </div>
 				<img class="place__image" src="./images/place-kolsky.jpg" alt="Берег Ледовитого океана">
-        <div class="">
+        <div class="place__paragraphs">
 				  <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
 						тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
 				  <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -87,7 +87,7 @@
 				  <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
 			  </div>
         <img class="place__image" src="./images/place-altai.jpg" alt="Ноутбук на фоне леса">
-        <div class="">
+        <div class="place__paragraphs">
 				  <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
 						В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
 				  <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
@@ -100,7 +100,7 @@
 					<a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
 				</div>
 				<img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед Байкала">
-        <div class="">
+        <div class="place__paragraphs">
 				  <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
 						в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
 				  <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
@@ -114,29 +114,31 @@
 					<a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
 				</div>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Пейзаж озера в лесу">
-        <div class="">
+        <div class="place__paragraphs">
 				  <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
 						В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
 						в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
 			</div>
 		</section>
-	<!--
-		<section class="cover container">
+	
+		<section class="cover">
 				<a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
 				<p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 		</section>
 
-		</main>
+	</main>
 	
 		<footer class="footer">
-			<a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-			<a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-			<a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-			<a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-			<a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      <nav class="footer__links">
+			  <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+			  <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+			  <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+			  <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+			  <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      </nav>
 			<p class="footer__copyright">© 2022. Маргарита Шабанова</p>
 		</footer>
-	-->
+
 </body>
 </html>
